[package]
name = "ra-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_provider = { git = "https://github.com/unicode-org/icu4x.git", features = ["serde", "sync"] }
icu_provider_blob = { git = "https://github.com/unicode-org/icu4x.git" }
icu_provider_adapters = { git = "https://github.com/unicode-org/icu4x.git" }
icu_datagen = { git = "https://github.com/unicode-org/icu4x.git", optional = true }
log = { version = "0.4.17", optional = true }
simple_logger = { version = "4.0.0", optional = true }

# databake options
icu_calendar = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_collator = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_collections = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_datetime = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_decimal = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_list = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_locid = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_locid_transform = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_normalizer = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_plurals = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_properties = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
icu_timezone = { git = "https://github.com/unicode-org/icu4x.git", default-features = false, optional = true }
litemap = { git = "https://github.com/unicode-org/icu4x.git", default-features = false }
zerovec = { git = "https://github.com/unicode-org/icu4x.git" }

[features]
default = [
    "icu_calendar",
    "icu_collator",
    "icu_collections",
    "icu_datetime",
    "icu_decimal",
    "icu_list",
    "icu_locid",
    "icu_locid_transform",
    "icu_normalizer",
    "icu_plurals",
    "icu_properties",
    "icu_timezone",
]
std = []
bin = ["dep:icu_datagen", "dep:simple_logger", "dep:log", "std"]

[[bin]]
name = "datagen"
path = "src/bin/datagen.rs"
required-features = ["bin"]